--- a/frontend/src/Style/index.css
+++ b/frontend/src/Style/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #222831;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -15,19 +15,16 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #00ADB5;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #00ADB5;
 }
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  color: #EEEEEE;
 }
 
 h1 {
@@ -42,16 +39,23 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #393E46;
   cursor: pointer;
   transition: border-color 0.25s;
+  margin-top: 20px;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #00ADB5;
 }
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+.register {
+  margin-top: 55px;
+}
+.fa-github {
+  font-size: 25px;
 }
 
 @media (prefers-color-scheme: light) {
