--- a/frontend/src/Style/Chessboard.css
+++ b/frontend/src/Style/Chessboard.css
@@ -1,8 +1,11 @@
 .chessboard-container {
-    width: 80%;
-    height: 80%;
+    width: 75%;
+    height: auto;
+    max-height: 75vh;
+    aspect-ratio: 1 / 1;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: gray;
+    overflow: hidden;
+    box-sizing: border-box;
 }
