--- a/frontend/src/Style/Main.css
+++ b/frontend/src/Style/Main.css
@@ -85,7 +85,7 @@ hr {
     flex-direction: column;
     align-items: center;
     width: 100%;
-    max-width: 400px; /* Control max width for alignment */
+    max-width: 400px;
     margin: 0 auto;
 }
 
