--- a/frontend/src/Style/HomePage.css
+++ b/frontend/src/Style/HomePage.css
@@ -65,5 +65,9 @@
     border-left: 2px solid #41464e;
     height: 65%;
     overflow-x: hidden;
+    overflow-y: auto;
+    scrollbar-width: thin;
+    scrollbar-color: #222831 #393E46;
 }
+
 
